# go-oidc

./: .gitignore  BUILD.bazel  oidc.go
example/idtoken/: BUILD.bazel
example/nonce/: BUILD.bazel
example/userinfo/: BUILD.bazel
