load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["app.go"],
    importpath = "github.com/mpawlowski/agent/submodules/go-oidc/example/userinfo",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_coreos_go_oidc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "userinfo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
